# dppnotifier

./: .gitattributes  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yaml
dppnotifier/: add_user_cli.py  app.py  credentials.py  db.py  exploration.ipynb  log.py  notifier.py  scrapper.py  types.py
dppnotifier/app/: app.py  constants.py  credentials.py  db.py  dpptypes.py  historizer.py  log.py  notifier.py  parser.py  scrapper.py  types.py  utils.py
dppnotifier/benchmark/: filter_subscriber.py
dppnotifier/cli/: add_user_cli.py  get_user.py
scripts/: build-package.sh  deploy-function.sh
tests/: __init__.py  common.py  test_app.py  test_dpp_notifier.py  test_dpptypes.py  test_parser.py
tests/data/: 2022_10_11T09_48_53.html  2022_10_11T09_48_53.json  2022_10_11T16_28_55.html  2022_10_11T16_28_55.json  2022_10_12T06_03_53.html  2022_10_12T06_03_53.json  2022_10_12T13_03_54.html  2022_10_12T13_03_54.json  2022_10_13T16_48_55.html  2022_10_13T16_48_55.json  2022_10_14T18_28_53.html  2022_10_14T18_28_53.json  2022_10_16T16_48_53.html  2022_10_16T16_48_53.json  2022_10_16T18_18_54.html  2022_10_16T18_18_54.json  2022_10_17T13_23_54.html  2022_10_17T13_23_54.json  2022_10_18T17_28_53.html  2022_10_18T17_28_53.json  2022_10_19T08_08_55.html  2022_10_19T08_08_55.json  2022_10_19T13_43_53.html  2022_10_19T13_43_53.json  2022_10_19T17_18_53.html  2022_10_19T17_18_53.json  2022_10_20T09_38_53.html  2022_10_20T09_38_53.json  2022_10_21T05_48_53.html  2022_10_21T05_48_53.json  2022_10_21T15_48_54.html  2022_10_21T15_48_54.json  2022_10_24T06_43_53.html  2022_10_24T06_43_53.json  2022_10_24T10_08_53.html  2022_10_24T10_08_53.json  2022_10_24T15_58_55.html  2022_10_24T15_58_55.json  2022_10_24T17_23_55.html  2022_10_24T17_23_55.json  (+4 more)
