[tool.poetry]
name = "dpp-notifier"
version = "0.1.0"
description = ""
authors = ["Marek Pavelka"]

packages = [
    { include = "dppnotifier" },
]

[tool.poetry.dependencies]
python = "~3.9.7"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
boto3 = "^1.24.80"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
pylint = "^2.15.3"
pytest-mock = "^3.8.2"
black = {version = "^22.8.0", extras = ["jupyter"]}
jupyterlab = "^3.4.7"
nbconvert = "^7.0.0"
jupytext = "^1.14.1"

[tool.poetry.scripts]
notify = "dppnotifier.app.app:run_job"
add-user = 'dppnotifier.add_user_cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
